--- a/src/app/components/fs-file/fs-file.component.scss
+++ b/src/app/components/fs-file/fs-file.component.scss
@@ -1,7 +1,3 @@
-:host {
-  label { cursor: pointer }
-}
-
 .file-label {
-  display: inline-block;
+  cursor: pointer
 }
